--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ neo4j==5.24.0
 networkx==3.3
 pandas==2.2.2
 dask[complete]==2023.5.0
+matplotlib==3.9.2
+python-igraph==0.11.6
+seaborn==0.13.2
+upsetplot==0.9.0
+matplotlib_venn==1.1.1
+scikit-learn==1.5.2
